# nlnet

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  TESTING.md  environment.yml  pyproject.toml  requirements.txt  row-based-tsv-parsing-experiment-.py  tsv-parsing-experiment.py
.github/workflows/: pull_request_template.md  run_tests.yml  run_tests_helper_functions.yml  scorecard.yml
experiments/: example-commit-data.py  get-repo-languages.py  parse_complex_rdf_example.py  repo_request.py  row-based-tsv-parsing-experiment-.py  tsv-parsing-experiment.py  v2-tsv-parsing-experiment.py
experiments/data_for_experiments/: tbl.n3
reports/junit/: junit.xml  report.html
src/: db.py  extract_test_metrics.py  github_repo_request_local.py  github_repo_request_local_to_db.py  github_repo_requests.py  guesslang_to_db.py  merge_test_file_paths.py  repo_language_detector.py  repo_request.py  sankey_diagram_plotly.py  supabase_db_interactions.py
src/DS/: metrics_extraction.py
src/find_repo/: __init__.py  find_repo.py
src/rdf_export/: export_to_rdf.py
supabase/: DDL.sql  config.toml
tests/: performance_comparison.py  test_add_explanations.py  test_github_repo_request_local.py  test_helper_functions.py  test_initial_data_preparation.py  test_metrics_extraction.py  test_string_utils.py
utils/: export_to_rdf.py  git_utils.py  initial_data_preparation.py  measure_performance.py  string_utils.py
