

[tool.poetry]
name = "nlnet"
version = "0.1.0"
description = "NLNet project for analyzing test files in repositories"
authors = ["Your Name <your.email@example.com>"]
python = ">=3.7,<3.8"

[tool.poetry.dependencies]
python = ">=3.7,<3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.ruff]
target-version = "py37"
line-length = 88
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]

[tool.poetry]
name = "nlnet"
version = "0.1.0"
description = "NLNet project for analyzing test files in repositories"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "F", "B", "I"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nlnet"
version = "0.1.0"
description = "NLnet project for analyzing test frameworks"
authors = ["Your Name <your.email@example.com>"]
python = ">=3.9,<3.10"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]